--- a/css/styles.css
+++ b/css/styles.css
@@ -578,3 +578,47 @@ a {
 ul {
     list-style: none;
 }
+.footer-subscribe-a {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+}
+.form-subscribe {
+    display: flex;
+    gap: 24px;
+}
+.text-subscribe {
+    width: 264px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #fff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    background: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    color: #ffffff;
+}
+.text-subscribe::placeholder {
+    color: #ffffff;
+}
+.button-email {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    gap: 16px;
+    height: 40px;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+}
+
