--- a/css/styles.css
+++ b/css/styles.css
@@ -694,3 +694,85 @@ background-color: #404bbf;
     border: none;
     background-color: #404BBF;
 }
+.maodal-butt:hover>.modal-icon,
+.maodal-butt:focus>.modal-icon {
+    fill: #FFFFFF;
+}
+.modal-icon {
+    fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-title {
+    text-align: center;
+    margin-bottom: 16px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+}
+.madal-input {
+    margin-bottom: 8px;
+}
+.modal-label {
+    display: block;
+    margin-bottom: 4px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+.modal-on {
+    position: relative;
+    margin-bottom: 8px;
+}
+.modal-in {
+    width: 100%;
+    height: 40px;
+    padding-left: 38px;
+    outline: transparent;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-in:hover,
+.modal-in:focus {
+    border-color: #4D5AE5;
+}
+.modal-in:hover+.modal-icon-in,
+.modal-in:focus+.modal-icon-in {
+    fill: #4D5AE5;
+}
+.modal-icon-in {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.textarea {
+    width: 100%;
+    height: 120px;
+    padding: 8px 16px;
+    resize: none;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: rgba(46, 47, 66, 0.4);
+    outline: transparent;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    background-color: transparent
+}
+.textarea:hover,
+.textarea:focus {
+    border-color: #4D5AE5;
+}
+.modal-text {
+    margin-bottom: 16px;
+}
