--- a/css/styles.css
+++ b/css/styles.css
@@ -776,3 +776,36 @@ background-color: #404bbf;
 .modal-text {
     margin-bottom: 16px;
 }
+.modal-checkbox {
+    margin-bottom: 24px;
+}
+.madal-input-checkbox {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+.modal-checkbox-link {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1;
+    letter-spacing: 0.03em;
+    color: #4D5AE5;
+    text-decoration-line: underline;
+}
+.modal-checkbox-link+.madal-input-checkbox>.modal-span {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+    fill: transparent;
+    border-radius: 2px;
+    background-color: transparent;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
