--- a/css/styles.css
+++ b/css/styles.css
@@ -794,7 +794,9 @@ background-color: #404bbf;
     color: #4D5AE5;
     text-decoration-line: underline;
 }
-.modal-checkbox-link+.madal-input-checkbox>.modal-span {
+.modal-checkbox-link
++.madal-input-checkbox
+>.modal-span {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -808,4 +810,11 @@ background-color: #404bbf;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-checkbox-link:checked
++.madal-input-checkbox
+>.modal-span {
+    background-color: #404BBF;
+    border: none;
+    fill: #F4F4FD;
 }
