--- a/css/styles.css
+++ b/css/styles.css
@@ -818,3 +818,26 @@ background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
 }
+.maodal-button {
+    display: block;
+    margin: 0 auto;
+    min-width: 169px;
+    padding: 16px 32px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    font-style: normal;
+    color: #FFF;
+    border: none;
+    border-radius: 4px;
+    background-color: #4D5AE5;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.maodal-button:hover,
+.maodal-button:focus {
+    background-color: #404bbf;
+}
