--- a/css/styles.css
+++ b/css/styles.css
@@ -656,6 +656,7 @@ background-color: #404bbf;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    background-color: rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
@@ -753,7 +754,7 @@ background-color: #404bbf;
     fill: #2E2F42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.textarea {
+.modal-textarea {
     width: 100%;
     height: 120px;
     padding: 8px 16px;
@@ -785,6 +786,7 @@ background-color: #404bbf;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
+    visibility: hidden;
 }
 .modal-checkbox-link {
     font-size: 12px;
