--- a/css/styles.css
+++ b/css/styles.css
@@ -648,7 +648,8 @@ background-color: #404bbf;
     fill: #FFFFFF;
     margin-left: 16px;
 }
-.modal-container {
+
+.backdrop {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -659,6 +660,11 @@ background-color: #404bbf;
     pointer-events: none;
     background-color: rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 .modal {
     position: absolute;
@@ -674,7 +680,7 @@ background-color: #404bbf;
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.maodal-butt {
+.modal-butt {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -691,13 +697,13 @@ background-color: #404bbf;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.maodal-butt:hover,
-.maodal-butt:focus {
+.modal-butt:hover,
+.modal-butt:focus {
+    background-color: #404bbf;
     border: none;
-    background-color: #404BBF;
 }
-.maodal-butt:hover>.modal-icon,
-.maodal-butt:focus>.modal-icon {
+.modal-butt:hover > .modal-icon,
+.modal-butt:focus > .modal-icon {
     fill: #FFFFFF;
 }
 .modal-icon {
