--- a/css/styles.css
+++ b/css/styles.css
@@ -719,7 +719,7 @@ background-color: #404bbf;
     letter-spacing: 0.02em;
     color: #2E2F42;
 }
-.madal-input {
+.modal-input {
     margin-bottom: 8px;
 }
 .modal-label {
@@ -804,8 +804,8 @@ background-color: #404bbf;
     text-decoration-line: underline;
 }
 .modal-label-checkbox
- + .madal-input-checkbox
- > .modal-span {
++ .modal-input-checkbox
+> .modal-span {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -821,13 +821,16 @@ background-color: #404bbf;
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-checkbox-link:checked
- + .madal-input-checkbox
- > .modal-span {
++ .modal-input-checkbox
+> .modal-span {
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
 }
-.maodal-button {
+.modal-checkbox-link:hover {
+    color: #4d5ae5;
+}
+.modal-button {
     display: block;
     margin: 0 auto;
     min-width: 169px;
@@ -846,7 +849,7 @@ background-color: #404bbf;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.maodal-button:hover,
-.maodal-button:focus {
+.modal-button:hover,
+.modal-button:focus {
     background-color: #404bbf;
 }
