--- a/css/styles.css
+++ b/css/styles.css
@@ -835,9 +835,9 @@ background-color: #404bbf;
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-checkbox-link:checked
-+ .modal-input-checkbox
-> .modal-span {
+.modal-checkbox-link:checked,
+.modal-input-checkbox,
+.modal-span {
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
