--- a/css/styles.css
+++ b/css/styles.css
@@ -826,17 +826,17 @@ background-color: #404bbf;
     align-items: center;
     width: 16px;
     height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
     margin-right: 8px;
     fill: transparent;
     border-radius: 2px;
     background-color: transparent;
-    border: 1px solid rgba(46, 47, 66, 0.4);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-checkbox-link:checked,
-.modal-input-checkbox,
+.modal-checkbox-link:checked >
+.modal-input-checkbox >
 .modal-span {
     background-color: #404bbf;
     border: none;
