--- a/css/styles.css
+++ b/css/styles.css
@@ -847,6 +847,11 @@ background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
 }
+.modal-input-checkbox:checked {
+    background-color: #404bbf;
+    border: none;
+    fill: #F4F4FD;
+}
 
 .modal-checkbox-link:hover {
     color: #4d5ae5;
