--- a/css/styles.css
+++ b/css/styles.css
@@ -835,7 +835,7 @@ background-color: #404bbf;
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input-checkbox:checked + .modal-checkbox-link .modal-span {
+.modal-input-checkbox:checked + .modal-label-checkbox .modal-checkbox-link {
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
