--- a/css/styles.css
+++ b/css/styles.css
@@ -680,7 +680,7 @@ background-color: #404bbf;
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-butt {
+.modal-close-butt {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -697,13 +697,13 @@ background-color: #404bbf;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-butt:hover,
-.modal-butt:focus {
+.modal-close-butt:hover,
+.modal-close-butt:focus {
     background-color: #404bbf;
     border: none;
 }
-.modal-butt:hover > .modal-icon,
-.modal-butt:focus > .modal-icon {
+.modal-close-butt:hover > .modal-icon,
+.modal-close-butt:focus > .modal-icon {
     fill: #FFFFFF;
 }
 .modal-icon {
